UI improvements: removed pricing section and signup button from gyms, removed coaches section from gallery, commented out history section in about page, fixed text colors

--- a/index.html
+++ b/index.html
@@ -34,6 +34,13 @@
     <!-- Canonical URL -->
     <link rel="canonical" href="https://altius.md/" />
     
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+    <meta name="theme-color" content="#1e3a8a" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <link rel="apple-touch-icon" href="/altLGOO.jpg" />
+    
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
